--- a/style.css
+++ b/style.css
@@ -30,6 +30,20 @@ body {
 .primary {
     color: dodgerblue;
 }
+
+.load {
+    width: 100%;
+    height: 100%;
+    background-color: #FF972C;
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: .9s;
+}
+
 /* navbar */
 .navbar {
     justify-content: space-between;
@@ -69,7 +83,7 @@ body {
 }
 .main {
     justify-content: center;
-    width: calc(100vw - 7rem);
+    width: 95vw;
     margin: 0 auto;
     height: 80vh;
 }
@@ -88,7 +102,8 @@ body {
 
 /* About us */
 .aboutUsPage {
-    min-height: fit-content;
+    min-height: 100vh;
+
 }
 .profile {
     flex-direction: column;
@@ -108,7 +123,7 @@ body {
     text-align: center;
 }
 .description-profile {
-    font-size: calc(1.5vw + .5em);
+    font-size: calc(1.5vw + .4em);
     padding: 0 20px;
     text-align: center;
 }
@@ -122,6 +137,7 @@ body {
     width: 90%;
     margin: 10px 0;
     border-radius: 5px;
+    font-size: calc(1.5vw + .2em);
 }
 .cerita-aboutUs {
     flex: 3;
@@ -198,7 +214,6 @@ iframe {
     height: calc(24vw + 1em);
     border-radius: 5px;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
-    transition: .3s;
 }
 
 @media screen and (max-width: 425px) {
@@ -213,7 +228,7 @@ iframe {
     /* about us page */
     .aboutUsPage {
         flex-direction: column;
-        height: fit-content;
+        min-height: fit-content !important;
     }
     .profile {flex-direction: row;}
     .aboutUsImg {width: 7em;}
@@ -231,7 +246,9 @@ iframe {
         text-align: left;
         margin-top: -10px;
     }
-    .cerita-aboutUs {flex: fit-content;}
+    .cerita-aboutUs {
+        flex: auto;
+    }
     /* portfolio */
     .projects {width: 90vw;}
     /* contact */
